documentation on classes.
updated the user import to contain more user info
